--- a/lab5/makefile
+++ b/lab5/makefile
@@ -4,6 +4,7 @@ all: monteCarloGsl
 
 monteCarloGsl: monteCarloGsl.c
 	$(CC) -o monteCarloGsl $^ -lgsl -lgslcblas -lm
+	$(CC) hitAndMiss.c -o hitAndMiss -lm
 
 clean:
 	rm -f *.o
